
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;
typedef int bufferx ;


 int WSACleanup () ;
 int printf (char*) ;
 int read (int ,char*,int) ;
 int recv (int,char*,int,int ) ;
 int select (int ,int *,int *,int *,struct timeval*) ;
 int send (int,char*,int,int ) ;
 int write (int,char*,int) ;

void gotshell(int new_sock)
 {
  struct timeval tv;
  int length;
  unsigned long o[2];
  char bufferx[1000];

  tv.tv_sec = 1;
  tv.tv_usec = 0;

  while (1) {

 o[0] = 1;
 o[1] = new_sock;

 length = select (0, (fd_set *)&o, ((void*)0), ((void*)0), &tv);
 if(length == 1)
  {
 length = recv (new_sock, bufferx, sizeof (bufferx), 0);
 if (length <= 0)
  {
 printf ("[-] Connection closed.\n");
 WSACleanup();
 return;
  }
 length = write (1, bufferx, length);
 if (length <= 0)
  {
 printf("[-] Connection closed.\n");
 WSACleanup();
 return;
  }
  }
 else
 {
 length = read (0, bufferx, sizeof (bufferx));
 if (length <= 0)
  {
 printf("[-] Connection closed.\n");
 WSACleanup();
 return;
  }
 length = send(new_sock, bufferx, length, 0);
 if (length <= 0)
 {
 printf("[-] Connection closed.\n");
 WSACleanup();
 return;
    }
   }
  }
   }
